--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>person.springcloud</groupId>
     <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>eureka7001</module>
+        <module>eureka7002</module>
+    </modules>
     <packaging>pom</packaging>
 
     <dependencyManagement>
