--- a/eureka7001/src/main/resources/application.yml
+++ b/eureka7001/src/main/resources/application.yml
@@ -6,8 +6,10 @@ spring:
 eureka:
   instance:
     hostname: www.eurakserver01.com
+  server:
+    enable-self-preservation: false
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
       defaultZone: http://www.eurakserver01.com:7001/eureka/
