--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>eureka7001</module>
-        <module>eureka7002</module>
+        <module>EurekaClient</module>
     </modules>
     <packaging>pom</packaging>
 
