--- a/orderProvider9001/src/main/resources/application.yml
+++ b/orderProvider9001/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8001
+  port: 9001
 spring:
   application:
-    name: product-service
+    name: order-service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource      #当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver        #mysql驱动包
