--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,28 @@
     <groupId>person.springcloud</groupId>
     <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <junit.version>4.12</junit.version>
+        <log4j.version>1.2.17</log4j.version>
+        <lombok.version>1.16.18</lombok.version>
+        <mysql.version>5.1.47</mysql.version>
+        <druid.springstarter.version>1.1.10</druid.springstarter.version>
+        <mybatis.spring.boot.version>1.3.1</mybatis.spring.boot.version>
+        <com.alibaba.fastjson.version>1.2.43</com.alibaba.fastjson.version>
+        <java.validate.version>2.0.1.Final</java.validate.version>
+    </properties>
+    
     <modules>
         <module>eureka7001</module>
         <module>EurekaClient</module>
         <module>eureka7002</module>
+        <module>common</module>
+        <module>productProvider8001</module>
+        <module>orderProvider9001</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,6 +50,49 @@
         <type>pom</type>
         <scope>import</scope>
     </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.spring.boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${com.alibaba.fastjson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.springstarter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${java.validate.version}</version>
+        </dependency>
     </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                    <addResources>true</addResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
